kubernetes/security/manifests/admission_controller/admission-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission-server
  namespace: default
  labels:
    app: admission-controller
spec:
  selector:
    app: admission-controller
  ports:
  - port: 443
    targetPort: 443
