kubernetes/security/manifests/admission_controller/mutate-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook-mutation
  namespace: default
webhooks:
- name: pod-mutation.default.com
  sideEffects: None
  failurePolicy: Fail
  admissionReviewVersions:
  - v1
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
  clientConfig:
    service:
      name: admission-server
      namespace: default
      path: /mutate/
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUUvRENDQXVTZ0F3SUJBZ0lVWHVMUXdCOUFkaWNrWFlLcEdzYkxteXBVTzFJd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0VqRVFNQTRHQTFVRUF3d0hiV0ZzZDJGeVpUQWVGdzB5TkRBNE1UWXhNekkwTURSYUZ3MHlOVEE0TVRZeApNekkwTURSYU1CSXhFREFPQmdOVkJBTU1CMjFoYkhkaGNtVXdnZ0lpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElDCkR3QXdnZ0lLQW9JQ0FRRFlJcjFVd1Ezd3J4UkFxdlZvSllrZ1RtT1E2NHRVcTExeSt1Ui9ySXY3M0hRVVBGcUMKdHNvVUFCNis0T2hXUzA0QUd0ZmlSNUlnUjNCZEs0ODk3K1BCNGl6ZjNJM3lOQlhMR1dSd2dCV093cE0zTTNKbwpNR1NVS0tZUW5Sa [...]
